Fixed bug in which grid would overflow

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-    --grid-dimension: 25;
+    --grid-dimension: 16;
 }
 
 .gridContainer {
@@ -7,7 +7,7 @@
     background-color: lightblue;
     max-width: 960px;
     max-height: 960px;
-    padding: 1px;
+    padding: 5px;
     gap: 1px;
     grid-template-columns: repeat(var(--grid-dimension), 1fr);
     grid-template-rows: repeat(var(--grid-dimension), 1fr);
